# Vacancies

./: .env  README.md  main.py  pyproject.toml
api/: __init__.py  abstract_api.py  api.py  hh_api.py
data/: currencies.json
database/: __init__.py  model.py  psql.py  raises.py  types.py
entities/: __init__.py  company.py  salary.py  vacancy.py
models/: __init__.py  models.py
screens/: __init__.py  detail_saved_vacancy_screen.py  detail_vacancy_screen.py  favorites_vacancies_screen.py  screen.py  search_screen.py  start_screen.py
table/: table.py
tests/: test.py
