[tool.poetry]
name = "hh-ru"
version = "0.1.0"
description = ""
authors = ["Lewbertsklol <128878546+Lewbertsklol@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.1.19"
aiohttp = "^3.9.5"
rich = "^13.7.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
